--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
-    <title>Tic-Tac-Toe</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tic Tac Toe</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Tic-Tac-Toe</h1>
-    <div id="gameboard"></div>
-    <div id="controls">
-        <input type="text" id="player1" placeholder="Player 1 Name">
-        <input type="text" id="player2" placeholder="Player 2 Name">
-        <button id="start-button">Start Game</button>
-        <button id="restart-button">Restart Game</button>
-    </div>
-    <div id="message"></div>
-    <div id="result-display"></div>
+  <h1>Tic Tac Toe</h1>
+
+  <div class="controls">
+    <input type="text" id="player1" placeholder="Player 1 Name (X)">
+    <input type="text" id="player2" placeholder="Player 2 Name (O)">
+    <button id="startBtn">Start / Restart Game</button>
+  </div>
+
+  <div id="board" class="board"></div>
+
+  <div class="status">
+    <p id="gameStatus">Game On!</p>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
